# WebdavBridge

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  theme.ts  useWebSocket.ts
frontend/src/pages/: ConfigPage.tsx  FilesPage.tsx  LoginPage.tsx  StatusPage.tsx
src/: config.rs  lib.rs  main.rs
src/cache/: content.rs  metadata.rs
src/resume/: mod.rs  range.rs
src/tasks/: content_fetch.rs  metadata_update.rs  mod.rs
src/webdav/: client.rs  dav_fs.rs  mod.rs  server.rs  types.rs
src/webui/: auth.rs  mod.rs  router.rs  state.rs  ws.rs
src/webui/api/: config.rs  files.rs  mod.rs  status.rs  symlinks.rs
